# fixml

./: .gitignore  .nojekyll  .readthedocs.yaml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _quarto.yml  conftest.py  environment.yaml  environment.yml  eval_report.qmd  final_report.html  index.html  proposal.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflow/: ci-cd.yml
.github/workflows/: ci-full.yml  ci.yml
analysis/: batch_run.py  batch_run.yml  preprocess_batch_run_result.py
analysis/ipynb/: 01_preprocess.ipynb  02_plots-for-final-report.ipynb
checklist/: _quarto.yml  checklist.yaml  checklist_demo.yaml  checklist_sys.html  references.bib
checklist/checklist.csv/: tests.csv  topics.csv
checklist/checklist_demo.csv/: overview.csv  tests.csv  topics.csv
checklist/checklist_sys.csv/: overview.csv  tests.csv  topics.csv
data/: github_repos.csv
data/processed/: github_repos.csv
data/raw/: repo-list.csv
docs/: 02_finding-report.html  Makefile  conf.py  example.ipynb  final_report.html  index.html  index.md  install_devel_build.md  installation.md  make.bat  motivation.md  objects.inv  proposal.html  quickstart.md  release_walkthrough.md  reliability.md  render.md  requirements.txt  search.json  searchindex.js  using_api.md
docs/source/: usage.rst
misc/: download-all-repos.sh  download-metadata.py  guideline_evaluator_gpt_gui.md
proposal/: _config.yml  proposal.ipynb  references.bib
report/: 01_analysis.ipynb  02_finding-report.ipynb  03_analyze-522-repo.ipynb  04_plots-for-presentations.ipynb  04_refactor-code.ipynb  05_test-Repo.ipynb  batch_run.py  batch_run.yml  capstone_proposal.md  demo.ipynb  demo_report_export.ipynb  demo_test-spec-gen.ipynb  final_report.docx  final_report.html  final_report.qmd  index.html  proposal.html  proposal.qmd  proposal_present.ipynb
report/docs/: robots.txt  search.json  sitemap.xml
report/final_report/: 01_preprocess.ipynb  02_finding-report.ipynb  02_plots-for-final-report.ipynb  _quarto.yml  final_report.html  final_report.md  final_report.qmd  ground_truth.csv  proposal.html  proposal.ipynb  proposal.qmd  references.bib  score_by_repo_run_3.5-turbo.csv  score_by_repo_run_4-turbo.csv  score_by_repo_run_4o.csv  score_count_by_repo_3.5-turbo.csv  score_count_by_repo_4-turbo.csv  score_count_by_repo_4o.csv  score_stat_by_repo_3.5-turbo.csv  score_stat_by_repo_4-turbo.csv  score_stat_by_repo_4o.csv
report/human_evaluation_report/: human_evaluation_report-DeepSpeech.md  human_evaluation_report-lightfm.md
report/proposal/: _config.yml  _toc.yml  proposal.ipynb  (+1 more)
scripts/: analyze.py  checklist_convert.py  download-all-repos.sh
src/: scan_json.py
tests/: conftest.py  test_checklist.py  test_repo.py  test_test_creation.py  test_utils.py
(+130 files in other folders)
