[tool.poetry]
name = "fixml"
version = "0.1.0"
description = "Package for automated test evaluation and creation"
authors = ["John Shiu, Orix Au Yeung, Tony Shum, Yingzi Jin"]
license = "MIT"
readme = "README.md"
include = ["src/fixml/data"]

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.6.0"
pandas = "^2.2.2"
pypandoc = "^1.13"
python-dotenv = "^1.0.1"
ruamel-yaml = "^0.18.6"
tqdm = "^4.66.4"
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.1"
langchain-core = "^0.2.1"
gitpython = "^3.1.43"
chardet = "^5.2.0"
jinja2 = "^3.1.4"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-book = "^1.0.0"
jupyterlab = "^4.2.1"
pytest = "^8.2.1"
pytest-git = "^1.7.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.scripts]
fixml = "fixml:cli_main"

[tool.pytest.ini_options]
markers = [
    "integration: marks test as an integration test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
